2011-06-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c:
	[ 3324578 ] getInstance() up call does not close provider context
	(patch by Santosh Bidaralli)

2011-06-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.c:
	[ 3324265 ] _sfcb_trace may deref NULL pointers

	* support.c:
	[ 3324255 ] Unnecessary NULL check in __cleanup_mt()

	* providerDrv.c:
	[ 3324247 ] Unnecessary NULL check in providerDrv

	* objectpath.c:
	[ 3324198 ] getObjectPath() may deref a NULL pointer

	* objectImpl.c:
	[ 3324192 ] Erroneous condition in loop in objectImpl:locateParameter()

	* interopServerProvider.c:
	[ 3324168 ] gatherNameSpacesData() may closedir() a NULL pointer

	* indCIMXMLHandler.c:
	[ 3324131 ] indCIMXMLHandler may return uninitialized CMPIStatus

	* providerDrv.c:
	[ 3324214 ] Remove dead code from providerDrv:loadProvider()

	* httpAdapter.c:
	[ 3323427 ] Unnecessary NULL check in httpAdapter

	* control.c:
	[ 3323422 ] Unnecessary NULL check in control.c

2011-06-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3314762 ] Memory leak in method invoke using SFCB local interface
	(patch by Chris Poblete)

	* control.c:
	[ 3165732 ] Add ability for client library to specify configuration file
	(patch by Josef Moellers)

2011-06-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, cimcClientSfcbLocal.c:
	[ 3314383 ] Memory leak in CimResource_Enumerate_EP
	(patch by Chris Poblete)

	* Makefile.am
	[ 3047562 ] [patch] Create bzip2 tarballs on "make dist"
	(patch by Klaus Kaempf)

2011-06-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassthroughProvider.c, cimAccountPassthrough.mof, 
	cimXmlRequest.c, cimXmlRequest.h, httpAdapter.c, Makefile.am,
	configure.ac, default.reg.in:
	[ 3313833 ] Allow for passthrough for expired user to update password

2011-05-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac